visual problem with click-me on mobile device, not mobile view on desktop browser - strange. tweaks made to try fix

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ h1 {
   }
 }
 
-h1:first-of-type {
+h1:first-of-type:not(.click-me) {
   margin-top: -6cqh;
 }
 
@@ -372,10 +372,9 @@ section:nth-of-type(2) {
 
 .click-me {
   position: absolute;
-  z-index: 1;
   transform: translate(-50%, -50%) scale(1.5, -1.5);
   top: 50%;
-  left: 50%
+  left: 50%;
 }
 
 .content {
